<resources>
    <string name="app_name">Food Hub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="favourites">Favourites</string>
    <string name="food_image">food_image</string>
    <string name="favorite">Favorite</string>
    <string name="details">Details</string>
    <string name="food_for_neveryone">Food for\nEveryOne</string>
    <string name="login">LOGIN</string>
    <string name="forget_password">Forget Password?</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_up">Sign Up</string>
    <string name="see_more">See More</string>
    <string name="see_less">See Less</string>
    <string name="description">This is a description of the recipe.,is a description of the recipe. is a description of the recipe.,is a description of the recipe. is a description of the recipe.,is a description of the recipe.</string>
    <string name="names">-> Sohila Emam \n-> Faten safwat \n-> Hisham Mohamed \n-> Abdallah Al-Adham</string>
    <string name="Description2">Tins application called (FoodHub) there ara home fragment that disply all meals by category and when to click to the meal show image of meal and ingradients and video to know all steps ,favourite fragment display meal that add as a favourite ,if you want to search about meal there is search fragment ....\n</string>
    <string name="description_about">📱 This is a description of the recipe.,is a description of the recipe. is a description of the recipe.,is a description of the recipe. is a description of the recipe.,is a description of the recipe</string>
    <string name="techology">🛠 Technologies Used: \n ->Kotlin,\n ->retrofit,\n-> Gradle ,\n->Room,\n ->View Model \n ->Xml \n ->Glide</string>
    <string name="names2"><![CDATA[👨‍💻 Creators:\n -> Faten Safwat,\n -> Sohila Emam,\n -> Hisham Mohamed,\n -> Abdallah, Al-Adham]]></string>
    <string name="description3">This is a description of the recipe, is a description of the recipe. is a description of the recipe, is a description of the recipe. is a description of the recipe, is a description of the recipe</string>
    <string name="technology1"><![CDATA[-> Kotlin\n-> XML\n-> Gradle\n-> Repository Pattern\n-> Coroutines\n-> Retrofit and okHttp\n-> Room\n-> View Model and LiveData\n-> Glide]]></string>
    <string name="creators"><![CDATA[-> Faten Safwat\n-> Sohila Emam\n-> Hisham Mohamed\n-> Abdallah Al-Adham]]></string>


</resources>